mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj/trg is loaded)
Auto Toggles (loot, gold, split, sac, assist, map, door, key)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
@
[Dec 01 2010] - Jamdog
  Fixed do_cheat so that only ID 1 can get a full restoration
  Added zone checks for load/purge commands below admin level 3 (GrGod)
[Nov 30 2010] - Jamdog
  Bug-Fix: Fixed incorrect rnum showing on stat room <vnum> (Thanks Kam)
  Added hsedit House Editor OLC
[Nov 28 2010] - Jamdog
  Converted houses (lib/etc/hcontrol file) to ASCII file format
  Added hcontrol file converter (hstoascii.c) to src/utils folder
  Converted houses to work as linked lists, not wasteful fixed-size arrays
  Added GOD houses and player-owned shops as house types
  Added 'receptionist' and 'player-shopkeeper' type spec-procs for houses
[Nov 26 2010] - Jamdog
  Bug-Fix: set level now allows GRGOD or higher to set to any mortal level
  Advance command changed to work for both mortal and admin levels
  Added increase_gold and increase_bank functions to prevent cash overflows
  Added dupe check for new characters in char creation (thanks Mirad)
  Bug-Fix: Since admin update, real mortals didn't show on who list (thanks Rhade)
[Nov 25 2010] - Jamdog
  Added diagonal directions with cedit toggle (default to 'off')
  Bug-Fix: admin <player> default now targets the victim player
  Bug-Fix: Crash bug developed due to no 'vict' in is_tell_ok, added checks
  Added HIDDEN flag for doors, hiding from exits, autoexits, scan and map
  Admins now show admin level instead of class on who list
[Nov 24 2010] - Jamdog
  Split mortal and admin levels (thanks fnord for original patch/idea)
  Mortal level converted to ubyte for 255 max
  Max mortal level now configurable in cedit
  Level on help files now indicates admin level