@@ -282,6 +282,7 @@ void snoop_check(struct char_data *ch);
 bool change_player_name(struct char_data *ch, struct char_data *vict, char *new_name);
 bool AddRecentPlayer(char *chname, char *chhost, bool newplr, bool cpyplr);
 void set_default_admin_privs(struct char_data *ch, bool keep_old);
+int get_admin_level_by_string(char *lv);
 /* Functions with subcommands */
 /* do_date */
 ACMD(do_date);
